[package]
name = "sprite-manager"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
solana-program = "^1.10.40"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "~1.0.5", features = ["no-entrypoint"] }
shank = "0.0.10"
borsh = "0.9.3"
thiserror = "~1.0"
num-derive = "0.3.3"
num-traits = "~0.2"
mpl-utils = "0.0.5"
mpl-token-metadata = { version = "1.6.5", features = ["no-entrypoint"] }

[features]
test-bpf = []

[dev-dependencies]
solana-sdk = "1.10.40"
solana-program-test = "1.11.5"

[lib]
crate-type = ["cdylib", "lib"]
